# electionguard-verifier

./: Cargo.toml  README.md  README.org  TODO.org  crypto.org
.github/workflows/: rust.yml  rustbuild.yml
src/: ballot.rs  check.rs  crypto.rs  decryption.rs  deserialize.rs  election.rs  encrypted.rs  errors.rs  generate.rs  lib.rs  main.rs  mod_arith.rs  mod_arith2.rs  schema.rs  serialize.rs  test.rs  test_gen_check.rs  trustee.rs
src/ballot/: selection.rs
src/crypto/: chaum_pedersen.rs  chaum_pederson.rs  elgamal.rs  group.rs  hash.rs  schnorr.rs
src/crypto/chaum_pedersen/: disj.rs
src/crypto/chaum_pederson/: disj.rs
src/decryption/: ballot.rs  tally.rs
src/election/: ballot.rs  hash.rs  parameters.rs  schnorr.rs  trustee.rs
src/election/ballot/: selection.rs
src/election/trustee/: coefficient.rs
src/encrypted/: ballot.rs  contest.rs  selection.rs
src/mod_arith/: macros.rs
src/serialize/: big_uint.rs  decrypted_selection.rs  decrypted_tally.rs  hash.rs
src/trustee/: coefficient.rs  public_key.rs
tests/: generated.json  invalid_randomized.json  json.rs  unencrypted.json  valid_encrypted.json
tests/records/: invalid_three_different_broken_proofs.json
