[package]
name = "electionguard_verify"
version = "0.1.0"
authors = ["Jake Waksbaum <jwaksbaum@galois.com>"]
edition = "2018"

[dependencies]
num = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.8.0"
digest = "0.8.0"
structopt = "0.2"
