[package]
name = "electionguard_verify"
version = "0.1.0"
authors = ["Jake Waksbaum <jwaksbaum@galois.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
digest = "0.8.0"
num = { version = "0.2.0", features = ["serde", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.8.0"
structopt = "0.2"
lazy_static = "1.4"
rand = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "verify"
path = "src/main.rs"

[[bin]]
name = "encrypt"
path = "src/bin/encrypt_election.rs"